[tool.poetry]
name = "test-packet-mirroring"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "test_packet_mirroring"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
requests = "^2.28.2"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
